# shinier

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  README_ndr.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: draft-pdf.yml  tests.yml
docs/: conf.py  index.md  requirements.txt
docs/documentation/: contributing.md  demos.md  documentation.md  license.md
documentation/: Example_usage.ipynb  The SHINIER the Better_ An Adaptation of the SHINE Toolbox on Python.docx  contributing.md  demos.ipynb  demos.md  documentation.md
documentation/papers/SHINIER/: paper.md
documentation/papers/SHINIER/jats/: paper.jats
documentation/papers/SHINIER/paper/: paper.bib  paper.md
documentation/readthedocs/: api.md  conf.py  index.md  project-links.md
documentation/readthedocs/_static/: custom.css
documentation/readthedocs/contributors_guide/: contributing.md  testing.md
documentation/readthedocs/user_guide/: contributing.md  demos.md  documentation.md  license.md
src/shinier/: ImageDataset.py  ImageListIO.py  ImageProcessor.py  Options.py  SHINIER.py  SHINIER_r1.py  __init__.py  _cconvolve.cpp  _cconvolve.pyx  base.py  utils.py
src/shinier/color/: Converter.py  GamutControl.py  M_RGB2XYZ_2020.npy  M_RGB2XYZ_601.npy  M_RGB2XYZ_709.npy  __init__.py  quantify_chroma_loss.py
tests/: README.md  __init__.py  conftest.py  manual_test.py
tests/other_tests/: compiled_convolution_tests.py  manual_test.py  test_build_extension.py  test_install_all_pythons.sh  test_install_all_pythons_on_linux.sh
tests/tools/: replay_failure.py  utils.py
tests/unit_tests/: Converter_test.py  FftPadding_test.py  GamutControl_test.py  ImageDataset_test.py  ImageListIO_test.py  ImageProcessor_test.py  Options_test.py
tests/validation_tests/: Converter_validation_test.py  FS_validation_test.py  GamutControl_validation_test.py  ImageProcessor_validation_test.py
